Fixes #12: Compatibility with Openfire 4.8.0
This commit disables the CoreThreadPoolEvaluator, which isn't compatible any more since the switch from MINA to Netty.

A new ticket has been created to restore this functionality in a future version (#16).